# Aerogri-d

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASE-NOTES-v1.0.md  ROADMAP-v2.0.md  WHY.md
backend/: aerogrid.db-journal  demo_data.json  import_demo.py  pyproject.toml  seed_demo.py
backend/app/: main.py
backend/app/api/: errors.py  idempotency.py  mappers.py  observability.py  rate_limit.py  schemas.py
backend/app/api/routers/: analytics.py  calibration.py  health.py  notifications.py  observations.py  signals.py
backend/app/application/: correlate_observation.py  interpret_observation.py  submit_observation.py
backend/app/config/: pilot.py  settings.py
backend/app/domain/: entities.py  policies.py  ports.py  value_objects.py
backend/app/infrastructure/: db.py  event_bus.py  gemini_interpreter.py  idempotency.py  media_store.py  notifications.py  rate_limiter.py  repositories.py
backend/app/infrastructure/providers/: cpcb.py  firms.py  weather.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  OPERATIONS.md  PILOT-REVIEW.md  RUNBOOK.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: benchmark.py  conftest.py  test_ai_layer.py  test_api.py  test_correlation_engine.py  test_domain_policies.py  test_domain_unit.py  test_domain_value_objects.py  test_end_to_end.py  test_idempotency.py  test_integration.py  test_load.py  test_media_store.py  (+3 more)
(+31 files in other folders)
